After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777742 - avfvideosrc SEGFAULT when using GLMemory
avfvideosrc SEGFAULT when using GLMemory
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.10.2
Other Mac OS
: Normal major
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-25 13:27 UTC by Erik Jonsson Thoren
Modified: 2017-01-27 15:25 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Erik Jonsson Thoren 2017-01-25 13:27:00 UTC
Using "video/x-raw(memory:GLMemory)” (default caps) fails for me using python-gst but somehow work when using gst-launch. (avfvideosrc ! fakesink)

Making it not use GLMemory ("video/x-raw") makes it skip this block: https://github.com/GStreamer/gst-plugins-bad/blob/master/sys/applemedia/avfvideosrc.m#L1002 which in turn makes the element work (i.e. not crash).

* thread #5: tid = 0x30c4b, 0x0000000102a9e5fd libglib-2.0.0.dylib`g_mutex_lock + 13, name = 'avfvideosrc0:src', stop reason = EXC_BAD_ACCESS (code=1, address=0x18)
  * frame #0: 0x0000000102a9e5fd libglib-2.0.0.dylib`g_mutex_lock + 13
    frame #1: 0x000000010480b4db libgstapplemedia.so`gst_gl_context_helper_ensure_context + 353
    frame #2: 0x0000000104810008 libgstapplemedia.so`-[GstAVFVideoSrcImpl decideAllocation:] + 118
    frame #3: 0x0000000104811083 libgstapplemedia.so`gst_avf_video_src_decide_allocation + 80
    frame #4: 0x00000001048b021c libgstbase-1.0.0.dylib`gst_base_src_loop + 370
    frame #5: 0x0000000103ba3fd9 libgstreamer-1.0.0.dylib`gst_task_func + 339
    frame #6: 0x0000000102a85664 libglib-2.0.0.dylib`g_thread_pool_thread_proxy + 37
    frame #7: 0x0000000102a849c6 libglib-2.0.0.dylib`g_thread_proxy + 90
    frame #8: 0x00007fff8b5e499d libsystem_pthread.dylib`_pthread_body + 131
    frame #9: 0x00007fff8b5e491a libsystem_pthread.dylib`_pthread_start + 168
    frame #10: 0x00007fff8b5e2351 libsystem_pthread.dylib`thread_start + 13
Comment 1 Sebastian Dröge (slomo) 2017-01-26 13:36:21 UTC
This should fix the crash at least, not sure if more fails afterwards. Can you
confirm?

commit 926c9a243d031b695709e86a3c89d77f2c55e257
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Thu Jan 26 15:35:11 2017 +0200

    applemedia: Fail cleanly instead of crashing if obtaining a GL display failed
    
    https://bugzilla.gnome.org/show_bug.cgi?id=777742