applemedia: Fail cleanly instead of crashing if obtaining a GL display failed

https://bugzilla.gnome.org/show_bug.cgi?id=777742